--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+   
   "scripts": {
-    "dev": "vite",
+    "dev": "vite -- host 127.0.0.1 -- port 5173",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -28,5 +29,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "vite": "^7.0.4"
+  },
+  "engines": {
+    "node": "20.x"
   }
+
+
 }
